--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,7 @@
 language: java
+jdk:
+- oraclejdk8
 
-sudo: false
-
-notifications:
-  email: false
-
-addons:
-  apt:
-    packages:
-      - zip
-
-script:
-  - echo "OK"
+before_script:
+- wget http://acm.math.spbu.ru/voudy/code_guide/Hw01Tests.kt
+- mv Hw01Tests.kt src/test/kotlin/homework01/
