--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ before_script:
 - mv Hw01Tests.kt src/test/kotlin/homework01/
 - wget http://acm.math.spbu.ru/voudy/code_guide/Hw03Tests.kt
 - mv Hw03Tests.kt src/test/kotlin/homework03/
+- wget http://acm.math.spbu.ru/voudy/code_guide/Hw04Tests.kt
+- mv Hw04Tests.kt src/test/kotlin/homework04/
